tests/ui/consts/const-eval/livedrop.stderr
error[E0493]: destructor of `Option<Vec<i32>>` cannot be evaluated at compile-time
  --> $DIR/livedrop.rs:3:9
   |
LL |     let mut always_returned = None;
   |         ^^^^^^^^^^^^^^^^^^^ the destructor for this type cannot be evaluated in constants
...
LL |         always_returned = never_returned;
   |         --------------- value is dropped here
   |
   = note: see issue #133214 <https://github.com/rust-lang/rust/issues/133214> for more information
   = help: add `#![feature(const_destruct)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0493`.
